Hotfix to make sure mobile sidebar does not display scrollbar when not visible

--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -779,7 +779,7 @@ html:not(:lang(cn)) iframe.scpnet-interwiki-frame {
 		padding-left: 0.25em;
 		z-index: 10;
 		top: 0;
-		left: calc(var(--sidebar-width-on-mobile) * -1);
+		left: calc(var(--sidebar-width-on-mobile) * -1 - 1rem);
 		width: var(--sidebar-width-on-mobile);
 		max-width: calc(80vw + (var(--base-font-size) * 0.5));
 		height: 100%;
